; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_control.c_ctl_id_by_name.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_control.c_ctl_id_by_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kctl = type { i32 }

@ctl_mtx = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ctl_id_by_name(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.kctl*, align 8
  store i8* %0, i8** %2, align 8
  store i32 0, i32* %3, align 4
  %5 = load i32, i32* @ctl_mtx, align 4
  %6 = call i32 @lck_mtx_lock(i32 %5)
  %7 = load i8*, i8** %2, align 8
  %8 = call %struct.kctl* @ctl_find_by_name(i8* %7)
  store %struct.kctl* %8, %struct.kctl** %4, align 8
  %9 = load %struct.kctl*, %struct.kctl** %4, align 8
  %10 = icmp ne %struct.kctl* %9, null
  br i1 %10, label %11, label %15

11:                                               ; preds = %1
  %12 = load %struct.kctl*, %struct.kctl** %4, align 8
  %13 = getelementptr inbounds %struct.kctl, %struct.kctl* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* %3, align 4
  br label %15

15:                                               ; preds = %11, %1
  %16 = load i32, i32* @ctl_mtx, align 4
  %17 = call i32 @lck_mtx_unlock(i32 %16)
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local i32 @lck_mtx_lock(i32) #1

declare dso_local %struct.kctl* @ctl_find_by_name(i8*) #1

declare dso_local i32 @lck_mtx_unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
